--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,10 @@ name = "audio-decomposition"
 version = "0.1.0"
 readme = "README.md"
 dependencies = [
-    "bs4>=0.0.2",
-    "datetime>=5.5",
-    "matplotlib>=3.9.2",
-    "numpy>=2.1.3",
-    "requests>=2.32.3",
-    "scipy>=1.14.1",
-    "soundfile>=0.12.1",
+    "beautifulsoup4==4.11.1",
+    "matplotlib==3.6.3",
+    "numpy==1.24.1",
+    "Requests==2.32.3",
+    "scipy==1.14.1",
+    "soundfile==0.12.1",
 ]
