--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests
-bs4
-numpy
-scipy
-soundfile
-matplotlib
+requests==2.32.3
+bs4==4.11.1
+numpy==1.24.1
+scipy==1.14.1
+soundfile==0.12.1
+matplotlib==3.6.3
